# Vita3K

./: CMakeLists.txt
vita3k/: CMakeLists.txt  interface.cpp  main.cpp
vita3k/app/src/: app_init.cpp
vita3k/gui-qt/: CMakeLists.txt
vita3k/gui-qt/include/gui-qt/: functions.h  qt_impl_sdl.h  qt_impl_sdl_state.h  state.h
vita3k/gui-qt/src/: gui-qt.cpp  home_screen.cpp  qt_impl_vulkan.cpp
